--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
     <h 4>hamza is trying to be a rich</h>
     <p>hello</p>
+
+    <img src="bag.png" alt="bags picture">
+    <img src="bag-1.png" alt="">
 </body>
 
 </html>
